--- a/index.html
+++ b/index.html
@@ -18,18 +18,21 @@
                 <a href="forms.html">Contact</a>
             </nav>
         </header>
-        <div>
+        <div class="picture">
             <h2>HI THERE 👋</h2>
             <p> I'm an individual who: </p>
             <img id="imgid" src="/Users/chandinithirumalai/GitHub/she-codes-html-css-exercises-chandinithirumalai/Portfolio/Images /Headshot.jpeg
             " alt="She Codes Cupcakes.">
+        </div>    
 
+        <div class="description">
             <ul>
                 <li>📚 Is currently pursuing a bachelor of commerce degree!</li>
                 <li>💻 Is working at Robert Walters as a Candidate Manager </li>
                 <li>✨ In my free I snorkel, listen to podcasts, romanticise about my travel plans </li>
             </ul>
         </div>
+
         <footer>
             Add footer notes here 
         </footer>
