--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <div class="description">
             <ul>
-                <li>📚 Is currently pursuing a bachelor of commerce degree!</li>
+                <li>📚 Is currently pursuing a </li>
                 <li>💻 Is working at Robert Walters as a Candidate Manager </li>
                 <li>✨ In my free I snorkel, listen to podcasts, romanticise about my travel plans </li>
             </ul>
