--- a/forms.html
+++ b/forms.html
@@ -4,13 +4,20 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>Introduction to Forms</title>
+        <title>Contact me</title>
         <link rel="stylesheet" href="styles.css">
     </head>
+   
 
     <body>
         <header>
             <h1>Get in touch!</h1>
+                <nav>
+                    <a href="index.html">About me</a>
+                    <a href="projects.html">Projects</a>
+                    <a href="forms.html">Contact</a>
+                </nav>
+        
         </header>
         <form action="https://formspree.io/f/xeqdzjzk" method="">
             <div class="form-item"> 
@@ -26,7 +33,7 @@
                 <textarea id="message" name="message"></textarea>    
             </div>
             <div class="form-item">        
-                <button type="submit">Send!</button>    
+                <button type="submit">Send!</a></button>    
             </div>
         </form>
 
