Changed description and made alignment changes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>About me</title>
+        <title>Chandini Thirumalai-about me</title>
         <meta name="description" content="chandini-thirumalai">
         <meta name="author" content="chandini-thirumalai">
         <link rel="stylesheet" href="styles.css">
@@ -24,17 +24,19 @@
         
         <div id="picture">
             <h2>HI THERE 👋</h2>
-            <p> I'm an individual who: </p>
+            <!-- <p> I'm an individual who: </p> -->
             <img id="imgid" src="Images/Headshot.jpeg" alt="Chandini thirumalai headshot">
         </div>    
 
         <div id="description">
             <ul>
-                <li>📚 Is currently pursuing a bachelor of commerce degree majoring in finance and marketing at UWA </li>
-                <li>💻 Is working at Robert Walters as a Candidate Manager </li>
-                <li>✨ In my free I snorkel, listen to podcasts, romanticise about my travel plans </li>
-                <li>🌎 countries travelled to </li>
-                <li>🎯 In the future </li>
+                <li>🇮🇳 I'm a passionately curious international student from the land of diversity- India!  </li>
+                <li>📚 I'm currently pursuing a bachelor of commerce degree majoring in finance and marketing at UWA</li>
+                <li>💻 I'm working in Tech Recruitment at the moment but I'm looking to transition into tech</li>
+                <li>✨ In my free I host LinkedIn workshops, I snorkel, listen to podcasts and romanticise about my travel plans </li>
+                <li>🌎 So far I've been to these countries: 🇦🇪🇦🇺🇧🇹🇮🇩🇮🇳🇱🇰🇲🇾🇴🇲🇶🇦🇺🇸 
+                <li>✈️ Where am I travelling to next? I'm planning my first ever solo trip. Location hint: This country is called the land of smiles! </li>
+                <li>🎯 In the future, I wish to pursue a career where I can fuse my passion for tech and travel  </li>
             </ul>
             
         </div>
