--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Portfolio</title>
+        <title>Projects</title>
         <meta name="description" content="She Codes Cupcakes">
         <meta name="author" content="She Codes">
         <link rel="stylesheet" href="styles.css">
